Fix text overflow and change profile popup position to fixed

--- a/src/app/shared/components/left-menu/left-menu.component.scss
+++ b/src/app/shared/components/left-menu/left-menu.component.scss
@@ -22,11 +22,12 @@ $border: #253545;
     font-weight: 600;
     border-bottom: 1px solid $border;
     .img-profile {
-        width: 50px;
-        height: 50px;
-        max-width: 80px;
-        max-height: 80px;
-        border-radius: 360px;
+        min-width: 50px;
+        min-height: 50px;
+        max-width: 50px;
+        max-height: 50px;
+        border-radius: 50%;
+        border: 1px solid $gray_1;
         background-color: $white;
         overflow: hidden;
         img {
@@ -37,6 +38,9 @@ $border: #253545;
         padding-left: 10px;
         text-align: center;
         cursor: pointer;
+        white-space: nowrap; 
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 .admin-bar,
@@ -102,13 +106,16 @@ $border: #253545;
         padding: 10px;
         border-bottom: 1px solid $border;
         .name {
-
+            white-space: nowrap; 
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         .active {
-            width: 7px;
-            height: 7px;
+            min-width: 7px;
+            min-height: 7px;
             border-radius: 50px;
             background-color: $ocean_3;
+            margin-left: 5px;
         }
     }
     .main-row:hover {
